# mariadb-connector-odbc

./: .bzrignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  BUILD.md  CMakeLists.txt  README  README.md  UBSAN.supp  appveyor.yml  azure-pipelines.yml  dsn_test.c  iodbc_arm.c  libmaodbc.pc.in  ma_api_internal.c  ma_api_internal.h  ma_bulk.c  ma_bulk.h  ma_catalog.c  ma_catalog.h  ma_common.c  ma_compatibility.h  ma_connection.c  ma_connection.h  ma_conv_charset.c  ma_conv_charset.h  ma_debug.c  ma_debug.h  ma_desc.c  ma_desc.h  ma_dll.c  ma_driver.c  ma_driver.h  ma_dsn.c  ma_dsn.h  ma_environment.c  ma_environment.h  ma_error.c  ma_error.h  (+32 more)
.github/workflows/: ci-s390x.yml  ci.yml
.travis/: docker-compose.yml  osx.sh  s390x.sh  script.sh
cmake/: CCplugins.txt  FindDM.cmake  FindIconv.cmake  FindMariaDB.cmake  connector_c.cmake  cpack_rpm.cmake  install.cmake  options_defaults.cmake  packaging.cmake  sqlcancelhandle.c  sqlcolattribute.c
driver/: CMakeLists.txt  iodbc_arm.cpp  ma_api_internal.cpp  ma_api_internal.h  ma_bulk.cpp  ma_bulk.h  ma_c_stuff.h  ma_catalog.cpp  ma_catalog.h  ma_codec.cpp  ma_codec.h  ma_common.c  ma_connection.cpp  ma_connection.h  ma_conv_charset.cpp  ma_conv_charset.h  ma_debug.cpp  ma_debug.h  ma_desc.cpp  ma_desc.h  ma_dll.c  ma_driver.cpp  ma_driver.h  ma_dsn.c  ma_dsn.h  ma_environment.cpp  ma_error.cpp  ma_error.h  ma_helper.cpp  ma_helper.h  ma_info.cpp  ma_info.h  ma_legacy_helpers.cpp  ma_legacy_helpers.h  ma_odbc.h  ma_odbc_version.h.in  ma_parse.cpp  ma_parse.h  ma_platform_posix.cpp  ma_platform_posix.h  (+17 more)
driver/class/: BinRow.cpp  BinRow.h  ClientPrepareResult.cpp  ClientPrepareResult.h  ClientSidePreparedStatement.cpp  ClientSidePreparedStatement.h  CmdInformationBatch.cpp  CmdInformationBatch.h  CmdInformationMultiple.cpp  CmdInformationMultiple.h  CmdInformationSingle.cpp  CmdInformationSingle.h  ColumnDefinition.cpp  ColumnDefinition.h  Parameter.cpp  Parameter.h  Protocol.cpp  Protocol.h  ResultSetBin.cpp  ResultSetBin.h  ResultSetMetaData.cpp  ResultSetMetaData.h  ResultSetText.cpp  ResultSetText.h  Results.cpp  Results.h  SQLString.h  SSPSDirectExec.cpp  ServerPrepareResult.cpp  ServerPrepareResult.h  ServerSidePreparedStatement.cpp  ServerSidePreparedStatement.h  TextRow.cpp  TextRow.h  pimpls.h
driver/interface/: CmdInformation.h  Exception.cpp  Exception.h  PrepareResult.cpp  PrepareResult.h  PreparedStatement.cpp  PreparedStatement.h  ResultSet.cpp  ResultSet.h  Row.cpp  Row.h
driver/template/: CArray.cpp  CArray.h
dsn/: CMakeLists.txt  ma_odbc_setup.h  mariadb_odbc_setup.def  odbc_dsn.c  odbc_dsn.rc  resource.h
dsn_test/: CMakeLists.txt  dsn_test.c
include/: CMakeLists.txt
include/mariadb/: sqlmariadb.h
osxinstall/: CMakeLists.txt  LICENSE.html  README.html  WELCOME.html  WELCOME.html.in  build_package.sh  build_package.sh.in  copy_package_files.sh  distribution.plist  distribution.plist.in  install_driver.c
osxinstall/scripts/: postinstall  postinstall.in
packaging/linux/: maodbc.ini.in  postinstall.in
packaging/macos/: CMakeLists.txt  LICENSE.html  WELCOME.html.in  build_package.sh.in  copy_package_files.sh.in
packaging/windows/: CMakeLists.txt  binaries_dir.xml.in  change_dsns_driver.c  mariadb_odbc.xml.in
test/: CMakeLists.txt  basic.c  blob.c  bulk.c  catalog.c  catalog1.c  catalog2.c  connstring.c  curext.c  cursor.c  datetime.c  desc.c  dyn_cursor.c  error.c  info.c  interactive.c  keys.c  mariadb_specific.c  multistatement.c  odbc.ini.in  odbcinst.ini.in  param.c  prepare.c  relative.c  result1.c  result2.c  scroll.c  standalone.c  tap.h  tran.c  types.c  unicode.c  use_result.c
win/: ma_odbc_setup.h
wininstall/: CMakeLists.txt  binaries_dir.xml.in  change_dsns_driver.c  mariadb_odbc.xml.in
